--- a/Atos.Web.Mobile.Trends/Web.config
+++ b/Atos.Web.Mobile.Trends/Web.config
@@ -53,6 +53,18 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules runAllManagedModulesForAllRequests="true"/>
+    <handlers>
+      <clear />
+      <add
+          name="StaticFile"
+          path="*" verb="*"
+          modules="StaticFileModule,DefaultDocumentModule,DirectoryListingModule"
+          resourceType="Either"
+          requireAccess="Read" />
+    </handlers>
+    <staticContent>
+      <mimeMap fileExtension=".html" mimeType="application/octet-stream" />
+    </staticContent>
   </system.webServer>
 
   <runtime>
