static content defined again, with right mime type

--- a/Atos.Web.Mobile.Trends/Web.config
+++ b/Atos.Web.Mobile.Trends/Web.config
@@ -63,7 +63,7 @@
           requireAccess="Read" />
     </handlers>
     <staticContent>
-      <mimeMap fileExtension=".html" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".html" mimeType="text/html" />
     </staticContent>
   </system.webServer>
 
