--- a/Atos.Web.Mobile.Trends/Atos.Web.Mobile.Trends.csproj
+++ b/Atos.Web.Mobile.Trends/Atos.Web.Mobile.Trends.csproj
@@ -147,6 +147,7 @@
     <Content Include="Scripts\jquery-ui-1.8.16.js" />
     <Content Include="Scripts\jquery-ui-1.8.16.min.js" />
     <Content Include="Scripts\jquery.barGraph.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
